--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,8 +28,7 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@id/parentConstrain"
         app:layout_constraintTop_toBottomOf="@id/tvMasuk"
-        app:layout_constraintVertical_chainStyle="spread_inside"
-        />
+        app:layout_constraintVertical_chainStyle="spread" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/parentConstrain"
@@ -62,12 +61,14 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edt_email">
+            app:layout_constraintTop_toBottomOf="@id/edt_email"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/gray">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edt_sandi_input"
                 style="@style/TextEdit"
-                android:drawableStart="@drawable/ic_password"
+                android:drawableStart="@drawable/ic_sandi"
                 android:hint="@string/password"
                 android:inputType="textPassword" />
 
@@ -109,6 +110,46 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnLogin" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnGoogle"
+            style="@style/GoogleBtn"
+            android:layout_marginHorizontal="60dp"
+            android:layout_marginTop="12dp"
+            android:elevation="5dp"
+            android:text="@string/masuk_google"
+            android:textColor="@color/black"
+            app:backgroundTint="@color/white"
+            app:icon="@drawable/ic_google"
+            app:iconGravity="start"
+            app:iconSize="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvAtau" />
+
+        <TextView
+            android:id="@+id/have_acc"
+            style="@style/medium16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:text="@string/havent_account"
+            app:layout_constraintBottom_toBottomOf="@id/toRegister"
+            app:layout_constraintEnd_toStartOf="@id/toRegister"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/toRegister" />
+
+        <TextView
+            android:id="@+id/toRegister"
+            style="@style/medium16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="32dp"
+            android:text="@string/register"
+            android:textColor="@color/lavender"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/have_acc"
+            app:layout_constraintTop_toBottomOf="@id/btnGoogle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
