--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#B8B8B8</color>
     <color name="red">#ba1a1a</color>
+    <color name="lavender">#406FF5</color>
 </resources>
