UI register done all

--- a/app/src/main/res/layout/fragment_register_first.xml
+++ b/app/src/main/res/layout/fragment_register_first.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".presentation.ui.RegisterFirstFragment">
+    tools:context=".presentation.ui.register.RegisterFirstFragment">
 
     <TextView
         android:id="@+id/tvRegister"
@@ -51,9 +51,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtFirstNameInput"
             style="@style/TextEdit"
-            android:drawableStart="@drawable/ic_email"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress" />
+            android:hint="@string/first_name"
+            android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -69,9 +68,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtLastNameInput"
             style="@style/TextEdit"
-            android:drawableStart="@drawable/ic_sandi"
-            android:hint="@string/password"
-            android:inputType="textPassword" />
+            android:hint="@string/last_name"
+            android:inputType="textPersonName" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -81,7 +79,7 @@
         style="@style/ButtonStyle"
         android:layout_marginHorizontal="60dp"
         android:layout_marginBottom="24dp"
-        android:text="@string/register"
+        android:text="@string/next"
         app:icon="@drawable/ic_next"
         app:iconGravity="end"
         app:iconSize="30dp"
@@ -114,7 +112,7 @@
         app:iconGravity="start"
         app:iconSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/toRegister" />
+        app:layout_constraintBottom_toTopOf="@id/toLogin" />
 
     <TextView
         android:id="@+id/haveAccount"
@@ -122,20 +120,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:text="@string/havent_account"
-        app:layout_constraintBottom_toBottomOf="@id/toRegister"
-        app:layout_constraintEnd_toStartOf="@id/toRegister"
+        android:text="@string/have_acc"
+        app:layout_constraintBottom_toBottomOf="@id/toLogin"
+        app:layout_constraintEnd_toStartOf="@id/toLogin"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/toRegister" />
+        app:layout_constraintTop_toTopOf="@id/toLogin" />
 
     <TextView
-        android:id="@+id/toRegister"
+        android:id="@+id/toLogin"
         style="@style/medium16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="@string/register"
+        android:text="@string/masuk"
         android:textColor="@color/lavender"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
