--- a/app/src/main/res/layout/fragment_register_first.xml
+++ b/app/src/main/res/layout/fragment_register_first.xml
@@ -62,6 +62,8 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtFirstName"
+        app:layout_constraintBottom_toTopOf="@id/btnRegister"
+        app:layout_constraintVertical_chainStyle="spread_inside"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@color/gray">
 
@@ -83,6 +85,7 @@
         app:icon="@drawable/ic_next"
         app:iconGravity="end"
         app:iconSize="30dp"
+        app:layout_constraintTop_toBottomOf="@id/edtLastName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tvOr"/>
 
